--- a/MVVM_pratices_2/MVVM_pratices_2.csproj
+++ b/MVVM_pratices_2/MVVM_pratices_2.csproj
@@ -8,4 +8,11 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Save\**" />
+    <EmbeddedResource Remove="Save\**" />
+    <None Remove="Save\**" />
+    <Page Remove="Save\**" />
+  </ItemGroup>
+
 </Project>
